# scars

./: Cargo.toml  LICENSE-MIT  README.md  rust-toolchain
.cargo/: config.toml
app/: Cargo.toml
app/src/: main.rs
examples/sim/hello/: Cargo.toml
examples/sim/hello/src/: main.rs
examples/stm32f4/interrupt/: Cargo.toml
examples/stm32f4/interrupt/src/: main.rs
examples/stm32f4/tasking/: Cargo.toml
examples/stm32f4/tasking/src/: main.rs
hal/scars-hal-e310x/: Cargo.toml  build.rs  default.lds
hal/scars-hal-e310x/src/: lib.rs
hal/scars-hal-std/: Cargo.toml
hal/scars-hal-std/src/: lib.rs
khal/scars-khal-e310x/: Cargo.toml  build.rs  default.lds  memory.x
khal/scars-khal-e310x/src/: lib.rs  start.S
khal/scars-khal-sim/: Cargo.toml
khal/scars-khal-sim/src/: lib.rs  printk.rs
khal/scars-khal-stm32f4/: Cargo.toml  build.rs  default.lds  memory.x
khal/scars-khal-stm32f4/src/: lib.rs  peripherals.rs
scars/: Cargo.toml  build.rs  scars.x
scars-arch-cortex-m/: Cargo.toml
scars-arch-cortex-m/src/: lib.rs
scars-arch-riscv/: Cargo.toml  build.rs
scars-arch-riscv/src/: lib.rs  trap.S
scars-hal/: Cargo.toml
scars-hal/src/: callbacks.rs  lib.rs
scars-khal/: Cargo.toml  LICENSE-APACHE
scars-khal/src/: callbacks.rs  lib.rs
scars-macros/: Cargo.toml
scars-macros/src/: lib.rs
scars-test/: Cargo.toml
scars-test/src/: lib.rs
scars/src/: api.rs  event_set.rs  events.rs  lib.rs  priority.rs  thread.rs  time.rs  tls.rs
scars/src/cell/: locked_cell.rs  mod.rs  pincell.rs  refcell.rs
scars/src/kernel/: abort.rs  atomic_list.rs  atomic_queue.rs  clock.rs  exception.rs  hal.rs  idle.rs  interrupt.rs  list.rs  mod.rs  printk.rs  priority.rs  scheduler.rs  stack.rs  syscall.rs  task.rs  tracing.rs  wait_queue.rs  waiter.rs
scars/src/sync/: async_channel.rs  async_condvar.rs  async_lock.rs  async_mutex.rs  ceiling_lock.rs  channel.rs  condvar.rs  interrupt_lock.rs  mod.rs  mutex.rs  no_lock.rs  once.rs  once_lock.rs  preempt_lock.rs  rendezvous.rs  shared.rs
scars/src/task/: mod.rs  task.rs  task_pool.rs
scars/src/thread/: builder.rs  mod.rs  raw_thread.rs  reference.rs
scars/tests/: block.rs  events01.rs  events02.rs  events03.rs  locking01.rs  locking02.rs  locking03.rs  locking04.rs  locking05.rs  locking06.rs  make_task.rs  nopreempt.rs  preempt.rs  yield.rs
unrecoverable-error/: Cargo.toml
unrecoverable-error-macros/: Cargo.toml
unrecoverable-error-macros/src/: lib.rs
unrecoverable-error/src/: lib.rs
