[workspace]
members = [
    "khal/scars-khal-e310x",
    "khal/scars-khal-stm32f4",
    "khal/scars-khal-sim",
    "scars",
    "scars-khal",
    "scars-arch-riscv",
    "scars-arch-cortex-m",
    "scars-test",
    "scars-macros",
    "examples/stm32f4/interrupt",
    "examples/stm32f4/tasking",
    "examples/sim/hello",
    "unrecoverable-error",
    "unrecoverable-error-macros"]
resolver = "2"

[profile.dev]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 0
panic = "abort"
debug = true

[profile.release]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 3
panic = "abort"
debug = true

[profile.test]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 3
panic = "abort"
