[package]
authors = ["Tero Huttunen <tero.huttunen@ultic.io>"]
edition = "2021"
name = "app"
version = "0.1.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/terohuttunen/scars/"

# makes `cargo check --all-targets` work
[[bin]]
name = "app"
bench = false
doctest = false
test = false

[dependencies]
#libc = { version = "0.2.150", optional = true }
#scars = { path = "../scars", features = ["tracing"] }
scars = { path = "../scars" }

[features]
default = ["hal-e310x"]
hal-e310x = ["scars/hal-e310x"]
hal-std = ["scars/hal-std"]