[package]
authors = ["Tero Huttunen <tero.huttunen@ultic.io>"]
edition = "2021"
name = "app"
version = "0.1.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/terohuttunen/scars/"

# makes `cargo check --all-targets` work
[[bin]]
name = "app"
bench = false
doctest = false
test = false

[dependencies]
scars = { path = "../scars", optional = true }

[features]
default = []
khal-e310x = ["scars/khal-e310x"]
khal-sim = ["scars/khal-sim"]
khal-stm32f4 = ["scars/khal-stm32f4"]