[package]
name = "scars-arch-cortex-m"
version = "0.1.0"
edition = "2021"
authors = ["Tero Huttunen <tero.huttunen@ultic.io>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/terohuttunen/scars/"

[lib]
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.3"
scars-khal = { version = "0.1.0", path = "../scars-khal" }