[package]
name = "scars-arch-riscv"
version = "0.1.0"
edition = "2021"
authors = ["Tero Huttunen <tero.huttunen@ultic.io>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/terohuttunen/scars/"

[lib]
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10.2"
scars-hal = { version = "0.1.0", path = "../scars-hal" }
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
semihosting = { version = "0.1.4", features = ["stdio"] }