[package]
name = "scars-arch-riscv"
version = "0.1.0"
edition = "2021"
authors = ["Tero Huttunen <tero.huttunen@ultic.io>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/terohuttunen/scars/"

[lib]
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10.2"
scars-khal = { version = "0.1.0", path = "../scars-khal" }
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
aligned = "0.4.2"
