[package]
name = "scars-khal"
version = "0.1.0"
edition = "2024"
authors = ["Tero Huttunen <tero.huttunen@ultic.io>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/terohuttunen/scars/"

[lib]
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned = "0.4.2"
