[package]
name = "scars-macros"
version = "0.1.0"
authors = ["Tero Huttunen <tero.huttunen@ultic.io>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/terohuttunen/scars/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
darling = "0.20.5"


[lib]
proc-macro = true