[package]
name = "scars-test"
version = "0.1.0"
edition = "2021"
authors = ["Tero Huttunen <tero.huttunen@ultic.io>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/terohuttunen/scars/"

[lib]
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_arch = "riscv32")'.dependencies]
#minicov = "0.3.1"
semihosting = { version = "0.1.4", features = ["stdio", "fs"] }

[features]
default = []
panic = []
std = []
