[package]
name = "scars-test"
version = "0.1.0"
edition = "2024"
authors = ["Tero Huttunen <tero.huttunen@ultic.io>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/terohuttunen/scars/"

[lib]
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtt-target = { version = "0.5.0", optional = true }
cortex-m = { version = "0.7.7", optional = true }

[target.'cfg(target_arch = "riscv32")'.dependencies]
#minicov = "0.3.1"
semihosting = { version = "0.1.4", features = ["fs", "stdio"] }


[target.'cfg(target_arch = "arm")'.dependencies]
#minicov = "0.3.1"
semihosting = { version = "0.1.4", features = ["fs", "stdio"] }

[features]
default = []
rtt = ["dep:rtt-target"]
semihosting = ["semihosting/stdio"]
cortex-m = ["dep:cortex-m"]
exit = []
panic = []
std = []
