[package]
name = "scars"
version = "0.1.0"
authors = ["Tero Huttunen <tero.huttunen@ultic.io>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/terohuttunen/scars/"
keywords = ["RTOS"]
description = "RTOS for hard real-time applications"


[lib]

[dependencies]
bit_field = "0.10.2"
const_env = "0.1.2"
critical-section = { version = "1.1.1" }
static_cell = "2.1.0"
scars-khal = { version = "0.1.0", path = "../scars-khal" }
scars-macros = { version = "0.1.0", path = "../scars-macros" }
scars-khal-e310x = { version = "0.1.0", path = "../khal/scars-khal-e310x", features = ["semihosting"], optional = true }
scars-khal-stm32f4 = { version = "0.1.0", path = "../khal/scars-khal-stm32f4", optional = true }
scars-khal-sim = { version = "0.1.0", path = "../khal/scars-khal-sim", optional = true }
scars-test = { version = "0.1.0", path = "../scars-test" }


[dev-dependencies]
scars-test = { version = "0.1.0", path = "../scars-test", features = ["panic"] }

[target.'cfg(target_arch = "riscv32")'.dev-dependencies]
semihosting = { version = "0.1.4", features = ["stdio"] }

[target.'cfg(target_arch = "arm")'.dependencies]
semihosting = { version = "0.1.4" }
#scars-test = { version = "0.1.0", path = "../scars-test" }


[features]
default = ["relative-delay"]
tracing = []
relative-delay = []
khal-e310x = ["dep:scars-khal-e310x", "scars-test/semihosting", "scars-test/exit"]
khal-sim = ["dep:scars-khal-sim", "scars-test/std", "scars-test/exit"]
khal-stm32f4 = ["dep:scars-khal-stm32f4", "scars-test/rtt", "scars-test/exit"]
