[package]
name = "scars-khal-sim"
version = "0.1.0"
edition = "2021"
authors = ["Tero Huttunen <tero.huttunen@ultic.io>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/terohuttunen/scars/"

[lib]
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10.2"
libc = { version = "0.2.151", path = "../../../libc" }
scars-khal = { version = "0.1.0", path = "../../scars-khal" }

